Fix vertical align sidebar

--- a/ot/css/main.less
+++ b/ot/css/main.less
@@ -1066,6 +1066,7 @@ aside#sidebar{
 	background: #e5e5e5;
 	display: table-cell;
 	float: none;
+	vertical-align: top;
     
     input {
         border: 1px solid rgba(0,0,0,0);
